[package]
name = "rust_server_client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3" 
uuid = { version = "1.3", features = ["v4", "serde"] }
log = "0.4"
log4rs = "1.2"
inquire = "0.7.4"